<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".view.ReviewActivity">


    <ImageView

        android:id="@+id/idSingleImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="4"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:layout_editor_absoluteX="14dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:stretchColumns="1"
        android:layout_marginEnd="10dp"
        >
        <TableRow>
        <TextView
            android:id="@+id/idName"
            style="@style/singleProductStyle"
            android:fontFamily="sans-serif-condensed-medium"
            android:fontWeight="700"
            android:text="@string/product"
            android:textSize="20sp"
            android:textStyle="bold|italic" />


            <TextView
            android:id="@+id/idProduct"
            style="@style/singleProductStyle"
            android:text="@string/id"
            android:textColor="@color/black" />
        <TextView
            android:textStyle="bold|italic"
            android:id="@+id/idPrice"
            style="@style/singleProductStyle"
            android:letterSpacing="0.1"
            android:fontWeight="700"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/price"
            android:textColor="@color/black" />
        </TableRow>
    </TableLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="1dp"
        android:background="?android:attr/listDivider" />




    <TextView
        android:id="@+id/idDescription"
        style="@style/singleProductStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:maxLines="3"
        android:text="@string/description"
        android:textColor="@color/black" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviewRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="3"
        android:background="@color/lightGrey"
        android:scrollIndicators="right"
        android:scrollbars="vertical"
        tools:listitem="@layout/review_row"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/no_ratings"
        android:background="@color/lightGrey"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/no_reviews_or_ratings_available_for_this_products"
        android:textSize="16sp"
        android:paddingHorizontal="50dp"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_weight="3"
        android:visibility="gone"
        />
    <ProgressBar
        android:layout_weight="3"
        android:id="@+id/review_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:visibility="visible"
        />
    <Button
        android:layout_marginVertical="10dp"
        android:id="@+id/idButtonAddReview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="50dp"
        android:layout_weight="1"
        android:text="@string/add_review"
        android:letterSpacing="0.2"
        android:onClick="reviewButton"

        />


</LinearLayout>